# ghga-devutil

./: .gitignore  .mandatory_files_ignore  .static_files_ignore  README.md  setup.cfg
.devcontainer/: Dockerfile  dev_launcher  devcontainer.json  docker-compose.yml
gdevutil/: __main__.py  cli.py
gdevutil/core/: __init__.py  annotate.py  io.py  main.py  markdown.py  models.py
ghga_devutil/: __init__.py  __main__.py  cli.py
ghga_devutil/core/: __init__.py  annotate.py  cli_message.py  exceptions.py  html.py  io.py  main.py  markdown.py  models.py
ghga_devutil/templates/: event_communications.md.jinja  rest_communications.md.jinja  service_communications.md.jinja  service_page.md.jinja
ghga_devutil/templates/mermaid/: event_consumes.md.jinja  event_produces.md.jinja  rest_consumes.md.jinja  rest_produces.md.jinja
scripts/script_utils/: fastapi_app_location.py
tests/: conftest.py  test_annotate.py  test_html.py
tests/fixtures/: services.py
