# Copyright 2021 - 2023 Universität Tübingen, DKFZ, EMBL, and Universität zu Köln
# for the German Human Genome-Phenome Archive (GHGA)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[metadata]
# Please adapt to package name:
name = ghga_devutil
version = attr: ghga_devutil.__version__
description = GHGA Microservice Development and Integration Utility
url = https://github.com/ghga-de/ghga-devutil
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = German Human Genome Phenome Archive (GHGA)
author_email = contact@ghga.de
license = Apache 2.0
classifiers =
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    typer[all]==0.7.0
    pydantic==1.10.5
    pyyaml==6.0
    jinja2==3.1.2

python_requires = >= 3.9

[options.package_data]
* = *.yaml, *.json, *.html, *.md

[options.entry_points]
# Please adapt to package name:
console_scripts =
    gdevutil = ghga_devutil.__main__:cli

[options.extras_require]
dev =
    pytest==7.2.1
    pytest-asyncio==0.20.3
    pytest-cov==4.0.0
    mypy==1.0.0
    pylint==2.15.10
    click==8.1.3
    black==22.12.0
    flake8==6.0.0
    isort==5.11.5
    bandit==1.7.4
    pre-commit==2.21.0
    requests==2.28.1
    types-requests==2.28.11.7
    mkdocs==1.4.2
    mkdocs-autorefs==0.4.1
    mkdocs-material==9.0.3
    mkdocs-material-extensions==1.1.1
    mkdocstrings==0.19.1
    mkdocstrings-python-legacy==0.2.3

all =
    %(dev)s


[options.packages.find]
exclude = tests
